# boardroom-os

./: .gitignore  README.en.md  README.md  boardroom-data-contracts.md  boardroom-ui-design.md  codex-followup-todo.md  context-compiler-design.md  detailed-todo.md  dev-prompts.md  feature.txt  findings.md  meeting-room-protocol.md  memory.txt  message-bus-design.md  progress.md  task_plan.md
backend/: integration-tests.template.toml  library_management_autopilot_live_015.toml  pyproject.toml  scenario-tests.template.toml
backend/app/: __init__.py  config.py  main.py  replay_audit_report_cli.py  replay_closeout_cli.py  replay_contract_gap_cli.py  replay_graph_progression_cli.py  replay_import_cli.py  replay_provider_failure_cli.py  scheduler_runner.py  worker_admin_auth_cli.py  worker_auth_cli.py
backend/boardroom_os_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/: runtime-provider-config.json
backend/tests/: conftest.py  test_api.py  test_api_surface.py  test_artifact_store.py  test_assignment_resolver.py  test_board_advisory_subjects.py  test_board_riddle_drill.py  test_boardroom_document_materializer.py  test_ceo_scheduler.py  test_config.py  test_context_compiler.py  test_decomposition.py  test_deliverable_contract.py  test_execution_targets.py  test_governance_templates.py  test_inprocess_scheduler.py  test_it006_regressions.py  test_live_configured_runner.py  test_live_library_management_runner.py  test_mainline_truth.py  test_meeting_room.py  test_output_schemas.py  test_persona_profiles.py  test_process_assets.py  test_reducer.py  (+31 more)
(+403 files in other folders)
