[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "boardroom-os-backend"
version = "0.1.0"
description = "Backend control plane bootstrap for Boardroom OS."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "openai>=2.0,<3.0",
  "pydantic>=2.0,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
objectstore = [
  "boto3>=1.34,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
